Feature accordion: mobile videos for Motorization and Smart Home (motorization.webm, smarthome.webm)
Made-with: Cursor

--- a/budget-blinds-static-site/products-blinds.html
+++ b/budget-blinds-static-site/products-blinds.html
@@ -1086,12 +1086,12 @@
       <div class="feature-hero__bg" data-image="2" data-desktop-image="assets/images/features-module/moisture-resistant.png" data-mobile-image="assets/images/blinds/gallery/02.png"></div>
       <div class="feature-hero__bg" data-image="3" data-desktop-image="assets/images/features-module/cordless.png" data-mobile-image="assets/images/blinds/gallery/03.png"></div>
       <div class="feature-hero__bg" data-image="4"></div>
-      <video class="feature-hero__bg-video" data-feature="4" autoplay muted loop playsinline aria-hidden="true">
+      <video class="feature-hero__bg-video" data-feature="4" data-desktop-src="assets/videos/blinds.webm" data-mobile-src="assets/images/blinds/gallery/motorization.webm" autoplay muted loop playsinline aria-hidden="true">
         <source src="assets/videos/blinds.webm" type="video/webm">
       </video>
       <div class="feature-hero__bg" data-image="5" data-desktop-image="assets/images/features-module/durability.png" data-mobile-image="assets/images/blinds/gallery/05.png"></div>
       <div class="feature-hero__bg" data-image="6"></div>
-      <video class="feature-hero__bg-video" data-feature="6" autoplay muted loop playsinline aria-hidden="true">
+      <video class="feature-hero__bg-video" data-feature="6" data-desktop-src="assets/videos/smarthome.webm" data-mobile-src="assets/images/blinds/gallery/smarthome.webm" autoplay muted loop playsinline aria-hidden="true">
         <source src="assets/videos/smarthome.webm" type="video/webm">
       </video>
       <div class="feature-hero__bg" data-image="7" data-desktop-image="assets/images/features-module/personalized.png" data-mobile-image="assets/images/blinds/gallery/06.png"></div>
