Copy: category title 'Shop by Category' → 'Explore by Category'
Made-with: Cursor

--- a/budget-blinds-static-site/products-blinds.html
+++ b/budget-blinds-static-site/products-blinds.html
@@ -729,7 +729,7 @@
     <div class="container">
       <header class="shop-category__header">
         <div class="shop-category__intro">
-          <h2 id="shop-category-heading" class="shop-category__title">Shop by Category</h2>
+          <h2 id="shop-category-heading" class="shop-category__title">Explore by Category</h2>
           <p class="shop-category__description">Browse our most popular custom blinds, from door and window blinds to smart, motorized solutions designed to simplify everyday living.</p>
         </div>
         <div class="shop-category__toggles" role="group" aria-label="View size">
